# STPG

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  compile.sh  generate.sh  index.html  paths.txt  run.sh  run_cbs_k.sh  run_exps.sh  simulate.cpp  simulate.sh  visualize.sh
CBS_K/: CMakeLists.txt  README.md  run.sh  test_ccbs_stats.txt
CBS_K/CBSH-rect-cmake/: CMakeLists.txt  Conflict.cpp  CorridorReasoning.cpp  CorridorReasoning.h  ICBSHSearchPairAnalysis.cpp  ICBSHSearchPairAnalysis.h  ICBSSearch.cpp  ICBSSearch.h  LLNode.cpp  LLNode.h  MDD.cpp  MDD.h  MDDNode.cpp  MDDNode.h  Path.h  RectangleReasoning.cpp  RectangleReasoning.h  ReservationTable.cpp  ReservationTable.h  SingleAgentICBS.cpp  SingleAgentICBS.h  agents_loader.cpp  agents_loader.h  common.h  compute_heuristic.cpp  compute_heuristic.h  constrained_agents_loader.cpp  constrained_agents_loader.h  constrained_map_loader.cpp  constrained_map_loader.h  driver.cpp  map_loader.cpp  map_loader.h
CBS_K/PythonCBS/: CMakeLists.txt
CBS_K/exp-scripts/: run-parallel-variant1.py
K_Robust_CBS/: .gitignore  README.md  run.sh
K_Robust_CBS/CBSH-rect-cmake/: CMakeLists.txt
MILP/: solver.py
Version_1_Code/generate_ADG/: generate_ADG.h
Version_1_Code/graph/: graph.cpp  graph.h
analysis/: ablation_studies.py  plot_all.py  plot_focal_search.py  plot_success_rates.py  plot_success_rates_ablation.py  plot_success_rates_random.py  plot_success_rates_warehouse.py
analysis/exp1_compare/: plot_all.py  plot_execution_times_city.py  plot_execution_times_game.py  plot_execution_times_random.py  plot_execution_times_warehouse.py  plot_success_rates_city.py  plot_success_rates_game.py  plot_success_rates_legend.py  plot_success_rates_random.py  plot_success_rates_warehouse.py
analysis/exp2_ablation/: plot_compare_speed.py
analysis/exp2_ablations/: plot_compare_groups_grouping._py  plot_compare_groups_grouping.py  plot_compare_speed_branching.py  plot_compare_speed_grouping.py  plot_compare_speed_heuristics.py  plot_compare_speed_incremental.py  plot_compare_speed_milp_grouping._py  plot_compare_speed_milp_grouping.py
analysis/old/: map.py  plot_f_min_vals.py  plot_scen.py  plot_success_rates.py  plot_success_rates_ablation.py
example/: path_file_names.csv  path_stats.csv
example/path_fail/: map_Paris_1_256_ins_10_an_110.fail  map_Paris_1_256_ins_10_an_120.fail  map_Paris_1_256_ins_12_an_120.fail  map_Paris_1_256_ins_14_an_100.fail  map_Paris_1_256_ins_14_an_110.fail  map_Paris_1_256_ins_14_an_120.fail  map_Paris_1_256_ins_16_an_100.fail  map_Paris_1_256_ins_16_an_110.fail  map_Paris_1_256_ins_16_an_120.fail  map_Paris_1_256_ins_16_an_70.fail  map_Paris_1_256_ins_16_an_80.fail  map_Paris_1_256_ins_16_an_90.fail  map_Paris_1_256_ins_17_an_100.fail  map_Paris_1_256_ins_17_an_110.fail  map_Paris_1_256_ins_17_an_120.fail  map_Paris_1_256_ins_17_an_70.fail  map_Paris_1_256_ins_17_an_80.fail  map_Paris_1_256_ins_17_an_90.fail  map_Paris_1_256_ins_18_an_100.fail  map_Paris_1_256_ins_18_an_110.fail  map_Paris_1_256_ins_18_an_120.fail  map_Paris_1_256_ins_18_an_80.fail  map_Paris_1_256_ins_18_an_90.fail  map_Paris_1_256_ins_21_an_110.fail  map_Paris_1_256_ins_21_an_120.fail  map_Paris_1_256_ins_21_an_90.fail  map_Paris_1_256_ins_22_an_120.fail  map_Paris_1_256_ins_23_an_100.fail  map_Paris_1_256_ins_23_an_110.fail  map_Paris_1_256_ins_23_an_120.fail  map_Paris_1_256_ins_23_an_80.fail  map_Paris_1_256_ins_24_an_100.fail  map_Paris_1_256_ins_24_an_110.fail  map_Paris_1_256_ins_24_an_120.fail  map_Paris_1_256_ins_24_an_70.fail  map_Paris_1_256_ins_24_an_80.fail  map_Paris_1_256_ins_24_an_90.fail  map_Paris_1_256_ins_25_an_120.fail  map_Paris_1_256_ins_3_an_100.fail  map_Paris_1_256_ins_3_an_120.fail  (+10 more)
example/sit/: map_Paris_1_256_ins_10_an_70_sit_0.json  map_Paris_1_256_ins_10_an_70_sit_1.json  map_Paris_1_256_ins_10_an_70_sit_2.json  map_Paris_1_256_ins_10_an_70_sit_3.json  map_Paris_1_256_ins_10_an_70_sit_4.json  map_Paris_1_256_ins_10_an_70_sit_5.json  map_Paris_1_256_ins_10_an_80_sit_0.json  map_Paris_1_256_ins_10_an_80_sit_1.json  (+436 more)
inc/: define.h  solver.h  types.h
py_milp/: solver.py
script/: gen_path_list.py  gen_path_lists.py  gen_paths.py  gen_paths_cbs.py  gen_paths_pbs.py  gen_paths_pbs_sadg.py  gen_situations.py  get_sit_stats.py  get_stats.py  merge_stats.py  remove_timeout_paths.py  run_exps.py  run_exps_ccbs.py
src/: a.out  bugs.txt  enumerate_grouping.cpp  generate.cpp  simulate.cpp  types.h  visualize.cpp
(+15188 files in other folders)
